# 1brc

./: .gitignore  Cargo.toml  README.md  expected_100.txt  expected_10000.txt  expected_10000000.txt  expected_1000000000.txt  new_city_names.rs  result_10000.txt
src/: baseline.rs  cities.rs  main.rs  record.rs
src/generate/: cities.rs  mod.rs
src/hashfunc/: mod.rs  stackvec.rs
