[package]
name = "onebillion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.7"
itertools = "0.12.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rayon = "1.8.0"
unic-ucd-category = "0.9.0"
unicode-segmentation = "1.10.1"
